# jbb-transcriber

./: .gitignore  CHANGELOG.md  Makefile  README.md  cliff.toml  correction_prompt.md  correction_prompt.txt  pyproject.toml  synthesis_prompt.md  transcriber.py
.github/: copilot-instructions.md
.github/agents/: Conductor.agent.md  implement-subagent.agent.md
_bmad-output/planning-artifacts/: re-architecture-plan.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: github-copilot.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
jbb_transcriber/: __init__.py  __main__.py  _audio.py  _exceptions.py  _pipeline.py  _prompts.py  _protocols.py  _retry.py  _security.py  _settings.py  cli.py
jbb_transcriber/backends/: __init__.py  _azure.py  _whisper.py
plans/: local-whisper-support-complete.md  local-whisper-support-plan.md
scripts/: release.sh
tests/: .env.example  __init__.py  conftest.py  test_api.py  test_audio_processing.py  test_azure_backends.py  test_cli.py  test_cli_model_validation.py  test_glossary_correction.py  test_negative.py  test_retry.py  test_synthesis.py  test_transcription.py
tests/fixtures/: .gitkeep
transcriber/: __init__.py  __main__.py  _audio.py  _config.py  _exceptions.py  _llm.py  _pipeline.py  _prompts.py  _protocols.py  _retry.py  _security.py  _settings.py  _transcription.py  _types.py  cli.py
transcriber/backends/: __init__.py  _azure.py  _whisper.py
