[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transcriber"
version = "0.1.0"
description = "Audio transcription CLI tool using Azure OpenAI with speaker diarization"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "requests>=2.31.0",
    "av>=12.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.9.0",
    "pyright>=1.1.0",
]

[project.scripts]
transcribe = "transcriber:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["transcriber.py", "correction_prompt.txt"]

[tool.hatch.build.targets.sdist]
include = [
    "transcriber.py",
    "correction_prompt.txt",
    "README.md",
    "pyproject.toml",
]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "strict"
include = ["transcriber.py"]
exclude = ["tests", "**/__pycache__"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = [".", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modernize syntax)
    "B",   # flake8-bugbear (common bugs)
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["transcriber"]
