[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jbb-transcriber"
version = "5.0.0"
description = "Audio transcription library and CLI tool using Azure OpenAI with speaker diarization"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27.0",
    "av>=12.0.0",
    "openai>=2.0.0",
]

[project.urls]
Repository = "https://github.com/jbb10/jbb-transcriber"

[project.optional-dependencies]
local = [
    "openai-whisper>=20231117",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.9.0",
    "pyright>=1.1.0",
]

[project.scripts]
transcribe = "jbb_transcriber.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["jbb_transcriber"]

[tool.hatch.build.targets.sdist]
include = [
    "jbb_transcriber/",
    "README.md",
    "pyproject.toml",
]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "strict"
include = ["jbb_transcriber"]
exclude = ["tests", "**/__pycache__"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = [".", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modernize syntax)
    "B",   # flake8-bugbear (common bugs)
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["jbb_transcriber"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
